# nation-pycord

./: .env  .gitignore  main.py  pyproject.toml  settings.py
Cogs/: _fun.py  admin.py  botevents.py  register.py  stats.py  tables.py  verification.py
Cogs/Extensions/: paging.py
