[tool.poetry]
name = "nation-pycord"
version = "0.1.0"
description = "Pro Clubs Nation Discord Bot"
authors = ["compil3 <luca.tenuta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.1"
pymongo = "^3.12.0"
PycordPaginator = "^0.0.3"
black = "^21.9b0"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "feature/slash"}
requests = "^2.26.0"
dnspython = "^2.1.0"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
